--- a/style.css
+++ b/style.css
@@ -40,6 +40,22 @@
 }
 #img_box{
     height: 60vh;
-    width: 40vw;
+    width: 50vw;
+    border: 0;
+    outline: 0;
     object-fit: contain;
+}
+@media (max-width:769px) {
+    #img_box{
+        height: 70vh;
+        width: 70vw;
+       
+    }
+}
+@media (max-width:431px) {
+    #img_box{
+        height: 70vh;
+        width: 95vw;
+       
+    }
 }
